# pitchfork

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PODMAN.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project2606.md
consul.d/: aux.hcl  core.hcl
docs/superpowers/plans/: 2026-06-19-inventories-api.md
docs/superpowers/specs/: 2026-06-19-inventories-api-design.md
service-aux-fastapi/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
service-aux-fastapi/app/: __init__.py  crud.py  deps.py  logger.py  main.py  models.py  schemas.py  settings.py
service-consul-image/: Dockerfile
service-core-go-stdlib/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
service-core-go-stdlib/cmd/api/: main.go
service-core-go-stdlib/docs/: oidc.md  user_system.md
service-core-go-stdlib/internal/oidc/: entity.go  handler.go  service.go
service-core-go-stdlib/internal/router/: router.go
service-infra-asum/: README.md
service-traefik-image/: Dockerfile
service-vertx-kotlin/: .gitignore  AGENTS.md  README.md  SKILLS.md  build.gradle.kts  config.json  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
service-vertx-kotlin/gradle/: libs.versions.toml
service-vertx-kotlin/logs/: app.2026-05-29.jsonl  app.2026-05-31.jsonl  app.2026-06-14.jsonl  app.2026-06-15.jsonl  app.jsonl
service-vertx-kotlin/skills/: adding-module.md  api-conventions.md  build-and-deploy.md  common-pitfalls.md  db-migration.md  module-pattern.md
traefik/: traefik.dynamic.yml
ui-astro/: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
ui-astro/apps/admin/: astro.config.mjs  (+2 more)
ui-astro/skills/: add-page.md  api-integration.md  project-structure.md  styling-guide.md  ui-component-guide.md
(+208 files in other folders)
